# litserve-tasks

./: README.md  pyproject.toml
src/litserve-tasks/spec/: tasks.py
src/litserve_tasks/: __init__.py
src/litserve_tasks/specs/: task.py
src/litserve_tasks/test_examples/: simple_task_example.py
tests/integration/: test_task_spec.py
tests/unit/: test_task_spec.py
